# library

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build.sh
.github/workflows/: static.yml
examples/: example-1.cpp  example-2.cpp
include/libnumerixpp/: libnumerixpp.hpp
include/libnumerixpp/core/: common.hpp
include/libnumerixpp/mathematics/: core.hpp  quadratic_equations.hpp
include/libnumerixpp/physics/: core.hpp  kinematics.hpp
src/: libnumerixpp.cpp
src/core/: common.cpp
src/mathematics/: core.cpp  quadratic_equations.cpp
src/physics/: core.cpp  kinematics.cpp
